2008-07-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* monsters.cc: Fixing incorrect initial monster stat generation.
	* schedule.cc: No longer refer to class variables after possible schedule
	  change. Also, remove possible double-deletion on scripted schedule.
	* gamewin.cc, gumps/Notebook_gump.h: Read in notebook when loading a saved
	  game (prevents data loss if notebook is not manually opened before saving
	  since last reload).
	* actors.*: Fixed cache-out crash in areas with dead bodies (bug #1998960).

2008-06-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/monstinf.cc: fixed undefined experience value

2008-06-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: removed some using std::'s to improve gcc 4.3 support

2008-06-14	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* fnames.h, mapedit/studio.cc, server/*: Consolidating name of socket file
	  in Exult/ES communication to be "<GAMEDAT>/exultserver" on all OSes.
	* server/servewin32.cc: FILE_SHARE_DELETE flag prevent CreateFile from
	  working in Win9x, preventing ES from working there.
	* actors.cc: Making NPCs quit combat/attacking a target after dying.

2008-06-11	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixing handling of dead bodies, including flags.

2008-06-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gamewin.cc: Fixing segfaults on exit.
	* actors.cc: Fixed checks that were failing due to operator precedence.
	* effects.cc: Fixed crash on using Death Vortex/Energy Mist. Fixed Death
	  Vortex and Energy Mist.
	* monsters.cc: Fixed carpet-filled monster inventory bug.
	* shapes/shapeinf.cc: Correctly initializing monster food value.
	* Fixing reagents mismatches between Exult and original games.
	* Fixed ammo counting bug causing some ranged weapons to not be found.
	  Improved attacking when switching dead weapon.

2008-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	BIG Commit (TM). Quite likely, there are a lot of bugs.